--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -11,6 +11,7 @@
     "Reload": "重新载入",
     "Apply": "应用",
     "Close": "关闭",
+    "Settings": "设置",
     "Error": "错误",
     "Only .ass and .ssa file are supported.": "仅支持 .ass 和 .ssa 文件。",
     "Indexing system fonts": "正在索引系统字体",
@@ -27,10 +28,13 @@
     "Italic": "斜体",
     "Bold italic": "粗斜体",
     "Eb": "内嵌",
+    "Embed": "",
     "Font": "字体",
     "Style": "样式",
     "Count": "字数",
+    "Character count": "",
     "Ss": "子集",
+    "Subset": "子集化",
     "File source": "文件源",
     "Embedded fonts": "内嵌字体",
     "Embedded file {p} doesn't exist.": "内嵌文件 {p} 不存在。",
@@ -47,7 +51,6 @@
     "File {p} doesn't exist.": "文件 {p} 不存在。",
     "Unable to read file {p}.": "文件 {p} 无法读取。",
     "Unable to write file {p}.": "文件 {p} 无法写入。",
-    "Settings": "设置",
     "Language": "语言",
     "OK": "确定",
     "Reminding": "提醒",
