Debug and more status info

--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -9,6 +9,9 @@
     "Fonts in the subtitle": "字幕中包含的字体",
     "Load": "载入",
     "Reload": "重新载入",
+    "File loaded": "文件已载入",
+    "Finished": "完成",
+    "File reloaded": "文件已重新载入",
     "Apply": "应用",
     "Close": "关闭",
     "Settings": "设置",
@@ -16,7 +19,7 @@
     "Only .ass and .ssa file are supported.": "仅支持 .ass 和 .ssa 文件。",
     "Indexing system fonts": "正在索引系统字体",
     "saving cache file failed.": "缓存文件保存失败.",
-    "done.": "完成.",
+    "done": "完成",
     "Use embedded font": "使用内嵌字体",
     "Use system font": "使用系统字体",
     "Use font from same diretory": "使用同目录下的字体",
@@ -41,7 +44,7 @@
     "{p} (source of '{f} {s}') doesn't exist.": "'{f} {s}'的文件源 {p} 不存在。",
     "Unabled to read {p} (source of '{f} {s}').": "'{f} {s}'的文件源 {p} 无法读取。",
     "File {p} doesn't contain font '{f} {s}'.": "文件 {p} 中不包含字体 '{f} {s}'。",
-    "No task to execute.": "没有可执行的任务。",
+    "No task to execute.": "没有可以执行的任务。",
     "File source of {f} {s} is big and subset is not selected,": "{f} {s} 的文件源较大且未选择子集化，",
     "embedding them directly may significantly increase the size of the subtitle file, are you sure about this?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
     "Font '{f} {s}' covers {c} charactors，embedding it may significantly increase the size of the subtitle file, are you sure about this?": "{f} 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
@@ -50,6 +53,7 @@
     "Subtitle format error!": "字幕格式错误！",
     "File {p} doesn't exist.": "文件 {p} 不存在。",
     "Unable to read file {p}.": "文件 {p} 无法读取。",
+    "Can not find embeded font {f} in subtitle.": "字幕中找不到内嵌字体 {f}",
     "Unable to write file {p}.": "文件 {p} 无法写入。",
     "Language": "语言",
     "OK": "确定",
