--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -5,20 +5,27 @@
     "Output file": "输出文件",
     "Modify source file": "修改源文件",
     "Save as": "另存为",
-    "Leave blank to save to source directory.": "留空则保存到源路径.",
+    "Leave blank to save to source directory.": "留空则保存到源路径",
     "Fonts in the subtitle": "字幕中包含的字体",
+    "Error": "错误",
+    "Warning": "警告",
+    "Reminding": "提醒",
+    "Opening...": "正在打开...",
+    "Subtitle file reading error:": "字幕文件读取错误：",
+    "Open failed.": "打开失败。",
+    "Embedded fonts {s} file error, ignored.": "内嵌字体 {s} 文件错误，已忽略。",
     "Load": "载入",
     "Reload": "重新载入",
-    "File loaded": "文件已载入",
-    "Finished": "完成",
-    "File reloaded": "文件已重新载入",
+    "File loaded.": "文件已载入。",
+    "File reloaded.": "文件已重新载入。",
+    "Executing...": "正在执行...",
+    "execution error:": "执行错误：",
+    "Finished, file reloaded": "完成，文件已重新载入。",
+    "Execution failed.": "执行失败。",
     "Apply": "应用",
     "Close": "关闭",
     "Settings": "设置",
-    "Error": "错误",
-    "Only .ass and .ssa file are supported.": "仅支持 .ass 和 .ssa 文件。",
-    "Indexing system fonts": "正在索引系统字体",
-    "saving cache file failed.": "缓存文件保存失败.",
+    "Only .ass and .ssa files are supported.": "仅支持 .ass 和 .ssa 文件。",
     "done": "完成",
     "Use embedded font": "使用内嵌字体",
     "Use system font": "使用系统字体",
@@ -29,35 +36,39 @@
     "Regular": "常规",
     "Bold": "粗体",
     "Italic": "斜体",
-    "Bold italic": "粗斜体",
+    "Bold Italic": "粗斜体",
     "Eb": "内嵌",
     "Embed": "",
     "Font": "字体",
     "Style": "样式",
     "Count": "字数",
-    "Character count": "",
+    "Non-repeating characters count": "非重复字符数",
     "Ss": "子集",
     "Subset": "子集化",
     "File source": "文件源",
     "Embedded fonts": "内嵌字体",
+    "Subtitle encoding cannot be recognized.": "字幕编码无法识别.",
+    "Subtitle line {d} format error.": "字幕 {d} 行格式错误。",
     "Embedded file {p} doesn't exist.": "内嵌文件 {p} 不存在。",
     "{p} (source of '{f} {s}') doesn't exist.": "'{f} {s}'的文件源 {p} 不存在。",
     "Unabled to read {p} (source of '{f} {s}').": "'{f} {s}'的文件源 {p} 无法读取。",
     "File {p} doesn't contain font '{f} {s}'.": "文件 {p} 中不包含字体 '{f} {s}'。",
     "No task to execute.": "没有可以执行的任务。",
     "File source of {f} {s} is big and subset is not selected,": "{f} {s} 的文件源较大且未选择子集化，",
-    "embedding them directly may significantly increase the size of the subtitle file, are you sure about this?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
-    "Font '{f} {s}' covers {c} charactors，embedding it may significantly increase the size of the subtitle file, are you sure about this?": "{f} 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
+    "embedding them directly may significantly increases the size of the subtitle file, are you sure about this?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
+    "Font '{f} {s}' covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "{f} 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
     "Font '{f} {s}' doesn't cover any charactor, are you sure you want to embed it?": "{f} 字体不覆盖任何字符，你确定要将它内嵌？",
+    "Fonts {f} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Are you sure you want to proceed?": "字体 {f} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示，你确定要这样做？",
     "Save to {p} failed!": "保存到 {p} 失败!",
     "Subtitle format error!": "字幕格式错误！",
     "File {p} doesn't exist.": "文件 {p} 不存在。",
     "Unable to read file {p}.": "文件 {p} 无法读取。",
-    "Can not find embeded font {f} in subtitle.": "字幕中找不到内嵌字体 {f}",
     "Unable to write file {p}.": "文件 {p} 无法写入。",
+    "Font File": "字体文件",
+    "All files": "所有文件",
+    "TrueType Font": "TrueType字体",
     "Language": "语言",
     "OK": "确定",
-    "Reminding": "提醒",
-    "Language changing requires restart to take effect, restart now?": "语言更改需重启生效，是否立刻重启？"
+    "Language changing takes effect after restart.": "语言更改在重启后才会生效。"
   }
 }
