Python端对fontmatch.dll的支持
python端样式匹配从样式名改为bold, italic两个布尔值
Font中粗体斜体判断基于OS/2表中的weight和style值
路径显示适配Windows（用\而不是/）

--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -13,7 +13,7 @@
     "Opening...": "正在打开...",
     "Subtitle file reading error:": "字幕文件读取错误：",
     "Open failed.": "打开失败。",
-    "Embedded fonts {s} file error, ignored.": "内嵌字体 {s} 文件错误，已忽略。",
+    "Embedded fonts {ff} file error, ignored.": "内嵌字体 {ff} 文件错误，已忽略。",
     "Load": "载入",
     "Reload": "重新载入",
     "File loaded.": "文件已载入。",
@@ -50,15 +50,15 @@
     "Subtitle encoding cannot be recognized.": "字幕编码无法识别.",
     "Subtitle line {d} format error.": "字幕 {d} 行格式错误。",
     "Embedded file {p} doesn't exist.": "内嵌文件 {p} 不存在。",
-    "{p} (source of '{f} {s}') doesn't exist.": "'{f} {s}'的文件源 {p} 不存在。",
-    "Unabled to read {p} (source of '{f} {s}').": "'{f} {s}'的文件源 {p} 无法读取。",
-    "File {p} doesn't contain font '{f} {s}'.": "文件 {p} 中不包含字体 '{f} {s}'。",
+    "{p} (source of \"{fs}\") doesn't exist.": "“{fs}” 的文件源 {p} 不存在。",
+    "Unabled to read {p} (source of \"{fs}\").": "“{fs}” 的文件源 {p} 无法读取。",
+    "File {p} doesn't contain font \"{fs}\".": "文件 {p} 中不包含字体 “{fs}”。",
     "No task to execute.": "没有可以执行的任务。",
-    "File source of {f} {s} is big and subset is not selected,": "{f} {s} 的文件源较大且未选择子集化，",
+    "File source of \"{fs}\" is big and subset is not selected,": "“{fs}” 的文件源较大且未选择子集化，",
     "embedding them directly may significantly increases the size of the subtitle file, are you sure about this?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
-    "Font '{f} {s}' covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "{f} 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
-    "Font '{f} {s}' doesn't cover any charactor, are you sure you want to embed it?": "{f} 字体不覆盖任何字符，你确定要将它内嵌？",
-    "Fonts {f} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Are you sure you want to proceed?": "字体 {f} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示，你确定要这样做？",
+    "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
+    "Font \"{fs}\" doesn't cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
+    "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Are you sure you want to proceed?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示，你确定要这样做？",
     "Save to {p} failed!": "保存到 {p} 失败!",
     "Subtitle format error!": "字幕格式错误！",
     "File {p} doesn't exist.": "文件 {p} 不存在。",
