--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -13,7 +13,6 @@
     "Opening...": "正在打开...",
     "Subtitle file reading error:": "字幕文件读取错误：",
     "Open failed.": "打开失败。",
-    "Embedded fonts {ff} file error, ignored.": "内嵌字体 {ff} 文件错误，已忽略。",
     "Load": "载入",
     "Reload": "重新载入",
     "File loaded.": "文件已载入。",
@@ -49,13 +48,13 @@
     "Embedded fonts": "内嵌字体",
     "Subtitle encoding cannot be recognized.": "字幕编码无法识别。",
     "Subtitle line {d} format error.": "字幕 {d} 行格式错误。",
-    "Embedded file {p} doesn't exist.": "内嵌文件 {p} 不存在。",
-    "{p} (source of \"{fs}\") doesn't exist.": "“{fs}” 的文件源 {p} 不存在。",
-    "Unabled to read {p} (source of \"{fs}\").": "“{fs}” 的文件源 {p} 无法读取。",
+    "Embedded file path {p} invalid.": "内嵌文件路径 {p} 无效。",
+    "Embedded file path {p} cannot be used as the source for external embedding.": "内嵌文件路径 {p} 不能作为外部嵌入的文件源。",
     "File {p} doesn't contain font \"{fs}\".": "文件 {p} 中不包含字体 “{fs}”。",
     "No task to execute.": "没有可以执行的任务。",
     "File source of \"{fs}\" is big and subset is not selected,": "“{fs}” 的文件源较大且未选择子集化，",
-    "embedding them directly may significantly increases the size of the subtitle file, are you sure about this?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
+    "embedding them directly may significantly increase the size of the subtitle file, are you sure you want to proceed?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
+    "Embedded font file \"{f}\" is invalid, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 是无效的，你确定要将它保留在字幕文件内？",
     "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
     "Font \"{fs}\" doesn't cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
     "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Are you sure you want to proceed?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示，你确定要这样做？",
