删掉”修改源文件“多选按钮，直接用一个输入框解决
微调界面

--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -5,7 +5,7 @@
     "Output file": "输出文件",
     "Modify source file": "修改源文件",
     "Save as": "另存为",
-    "Leave blank to save to source directory.": "留空则保存到源路径",
+    "Leave blank to save to source path.": "留空则保存到源路径",
     "Fonts in the subtitle": "字幕中包含的字体",
     "Error": "错误",
     "Warning": "警告",
@@ -36,24 +36,23 @@
     "Bold": "粗体",
     "Italic": "斜体",
     "Bold Italic": "粗斜体",
-    "Eb": "内嵌",
-    "Embed": "",
+    "Embed": "内嵌",
     "Font": "字体",
     "Style": "样式",
     "Count": "字数",
     "Non-repeating characters count": "非重复字符数",
-    "Ss": "子集",
     "Subset": "子集化",
+    "Subsetting": "",
     "File source": "文件源",
     "Embedded fonts": "内嵌字体",
     "Subtitle encoding cannot be recognized.": "字幕编码无法识别。",
     "Subtitle line {d} format error.": "字幕 {d} 行格式错误。",
     "Embedded file path {p} invalid.": "内嵌文件路径 {p} 无效。",
     "Embedded file path {p} cannot be used as the source for external embedding.": "内嵌文件路径 {p} 不能作为外部嵌入的文件源。",
-    "File {p} doesn't contain font \"{fs}\".": "文件 {p} 中不包含字体 “{fs}”。",
+    "File {p} does not contain font \"{fs}\".": "文件 {p} 中不包含字体 “{fs}”。",
     "No task to execute.": "没有可以执行的任务。",
-    "File source of \"{fs}\" is big and subset is not selected,": "“{fs}” 的文件源较大且未选择子集化，",
-    "embedding them directly may significantly increase the size of the subtitle file, are you sure you want to proceed?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
+    "File source of \"{fs}\" is large and subsetting is not selected,": "“{fs}” 的文件源较大且未选择子集化，",
+    "embedding them directly may significantly increase the file size of subtitle, are you sure you want to proceed?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
     "Embedded font file \"{f}\" is invalid, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 是无效的，你确定要将它保留在字幕文件内？",
     "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
     "Font \"{fs}\" doesn't cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
