--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -1,6 +1,6 @@
 {
   "name": "简体中文",
-  "lang": {
+  "dict": {
     "Input file": "输入文件",
     "Output file": "输出文件",
     "Modify source file": "修改源文件",
@@ -36,13 +36,14 @@
     "Bold": "粗体",
     "Italic": "斜体",
     "Bold Italic": "粗斜体",
-    "Embed": "内嵌",
+    "Emb": "内嵌",
+    "Embedding": "",
     "Font": "字体",
     "Style": "样式",
     "Count": "字数",
     "Non-repeating characters count": "非重复字符数",
-    "Subset": "子集化",
-    "Subsetting": "",
+    "Sub": "子集",
+    "Subsetting": "子集化",
     "File source": "文件源",
     "Embedded fonts": "内嵌字体",
     "Subtitle encoding cannot be recognized.": "字幕编码无法识别。",
@@ -55,11 +56,11 @@
     "embedding them directly may significantly increase the file size of subtitle, are you sure you want to proceed?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
     "Embedded font file \"{f}\" is invalid, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 是无效的，你确定要将它保留在字幕文件内？",
     "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
-    "Font \"{fs}\" doesn't cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
+    "Font \"{fs}\" does not cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
     "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Are you sure you want to proceed?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示，你确定要这样做？",
     "Save to {p} failed!": "保存到 {p} 失败!",
     "Subtitle format error!": "字幕格式错误！",
-    "File {p} doesn't exist.": "文件 {p} 不存在。",
+    "File {p} does not exist.": "文件 {p} 不存在。",
     "Unable to read file {p}.": "文件 {p} 无法读取。",
     "Unable to write file {p}.": "文件 {p} 无法写入。",
     "Font File": "字体文件",
