--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -28,7 +28,7 @@
     "done": "完成",
     "Use embedded font": "使用内嵌字体",
     "Use system font": "使用系统字体",
-    "Use font from same diretory": "使用同目录下的字体",
+    "Use font from same directory": "使用同目录下的字体",
     "Select font path manually": "手动选择字体路径",
     "Extract embedded font": "提取内嵌字体",
     "No source": "无来源",
