--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -11,21 +11,20 @@
     "Warning": "警告",
     "Reminding": "提醒",
     "Opening...": "正在打开...",
-    "Subtitle file reading error:": "字幕文件读取错误：",
+    "Subtitle file reading error": "字幕文件读取错误",
     "Open failed.": "打开失败。",
     "Load": "载入",
     "Reload": "重新载入",
     "File loaded.": "文件已载入。",
     "File reloaded.": "文件已重新载入。",
     "Executing...": "正在执行...",
-    "execution error:": "执行错误：",
+    "Execution error": "执行错误：",
     "Finished, file reloaded": "完成，文件已重新载入。",
     "Execution failed.": "执行失败。",
     "Apply": "应用",
     "Close": "关闭",
     "Settings": "设置",
     "Only .ass and .ssa files are supported.": "仅支持 .ass 和 .ssa 文件。",
-    "done": "完成",
     "Use embedded font": "使用内嵌字体",
     "Use system font": "使用系统字体",
     "Use font from same directory": "使用同目录下的字体",
@@ -46,8 +45,8 @@
     "Subsetting": "子集化",
     "File source": "文件源",
     "Embedded fonts": "内嵌字体",
-    "Subtitle encoding cannot be recognized.": "字幕编码无法识别。",
-    "Subtitle line {d} format error.": "字幕 {d} 行格式错误。",
+    "Encoding could not be recognized.": "编码无法识别。",
+    "Line {d} format error.": "第 {d} 行格式错误。",
     "Embedded file path {p} invalid.": "内嵌文件路径 {p} 无效。",
     "Embedded file path {p} cannot be used as the source for external embedding.": "内嵌文件路径 {p} 不能作为外部嵌入的文件源。",
     "File {p} does not contain font \"{fs}\".": "文件 {p} 中不包含字体 “{fs}”。",
@@ -57,7 +56,7 @@
     "Embedded font file \"{f}\" is invalid, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 是无效的，你确定要将它保留在字幕文件内？",
     "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
     "Font \"{fs}\" does not cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
-    "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Are you sure you want to proceed?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示，你确定要这样做？",
+    "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Do you want to embed all other styles of these font?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示。你是否需要将该这些体的其他样式一起嵌入？",
     "Save to {p} failed!": "保存到 {p} 失败!",
     "Subtitle format error!": "字幕格式错误！",
     "File {p} does not exist.": "文件 {p} 不存在。",
