优化一下FontList的结构
复选框点击响应由Button改为ButtonRelease

--- a/SubFontManager/lang/zh-cn.json
+++ b/SubFontManager/lang/zh-cn.json
@@ -45,6 +45,7 @@
     "Subsetting": "子集化",
     "File source": "文件源",
     "Embedded fonts": "内嵌字体",
+    "(Corrupted)": "（损坏）",
     "Encoding could not be recognized.": "编码无法识别。",
     "Line {d} format error.": "第 {d} 行格式错误。",
     "Embedded file path {p} invalid.": "内嵌文件路径 {p} 无效。",
@@ -53,7 +54,7 @@
     "No task to execute.": "没有可以执行的任务。",
     "File source of \"{fs}\" is large and subsetting is not selected,": "“{fs}” 的文件源较大且未选择子集化，",
     "embedding them directly may significantly increase the file size of subtitle, are you sure you want to proceed?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
-    "Embedded font file \"{f}\" is invalid, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 是无效的，你确定要将它保留在字幕文件内？",
+    "Embedded font file \"{f}\" is corrupted, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 已损坏，你确定要将它保留在字幕文件内？",
     "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
     "Font \"{fs}\" does not cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
     "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Do you want to embed all other styles of these font?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示。你是否需要将该这些体的其他样式一起嵌入？",
