--- a/SubFontManager/lang/zh_cn.json
+++ b/SubFontManager/lang/zh_cn.json
@@ -52,12 +52,11 @@
     "Embedded file path {p} cannot be used as the source for external embedding.": "内嵌文件路径 {p} 不能作为外部嵌入的文件源。",
     "File {p} does not contain font \"{fs}\".": "文件 {p} 中不包含字体 “{fs}”。",
     "No task to execute.": "没有可以执行的任务。",
-    "File source of \"{fs}\" is large and subsetting is not selected,": "“{fs}” 的文件源较大且未选择子集化，",
-    "embedding them directly may significantly increase the file size of subtitle, are you sure you want to proceed?": "将它们直接内嵌可能会导致字幕文件体积显著增大，你确定要这样做？",
+    "File source of {ff} is large and subsetting is not selected, embedding them directly may significantly increase the file size of subtitle. Do you want to subset the fonts before embedding it?": "字体 {ff} 的文件源较大且未选择子集化，将它们直接内嵌可能会导致字幕文件显著增大。是否需要将字体子集化后再进行嵌入？",
     "Embedded font file \"{f}\" is corrupted, are you sure you want to keep it in the subtitle file?": "内嵌字体文件 “{f}” 已损坏，你确定要将它保留在字幕文件内？",
     "Font \"{fs}\" covers {c} charactors, embedding it may significantly increase the size of the subtitle file, are you sure you want to proceed?": "“{fs}” 字体覆盖了{c}个字符，将它内嵌可能会导致字幕文件显著增大，你确定要这样做？",
     "Font \"{fs}\" does not cover any charactor, are you sure you want to embed it?": "“{fs}” 字体不覆盖任何字符，你确定要将它内嵌？",
-    "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Do you want to embed all other styles of these font?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示。你是否需要将该这些体的其他样式一起嵌入？",
+    "Fonts {ff} contain multiple styles, but not all of them have been selected for embedding. This may cause subtitle display issues, as unembedded styles will still reference the embedded styles as their source during playback, resulting in incorrect rendering. Do you want to embed all other styles of these font?": "字体 {ff} 包含多个样式却未被全部选择嵌入，这会导致字幕在被播放时，这些字体的未嵌入样式仍然以嵌入的字体样式为文件源，导致字体无法正确显示。是否需要将该这些字体的其他样式一起嵌入？",
     "Save to {p} failed!": "保存到 {p} 失败!",
     "Subtitle format error!": "字幕格式错误！",
     "File {p} does not exist.": "文件 {p} 不存在。",
